Complete project update - Ready for GitHub
 Features completed:
- ML app with 5 main sections
- Streamlit deployment configuration
- ESK housing finder functionality
- Complete documentation
- Sample data and ML models

 Ready for deployment to Heroku/Streamlit Cloud

--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,12 @@ htmlcov/
 nosetests.xml
 coverage.xml
 *.cover
+
+# Personal documentation and chat logs
+docs/personal/
+**/claude-chat*.docx
+**/chat-verlauf*.docx
+**/personal-notes*.docx
 *.py,cover
 .hypothesis/
 .pytest_cache/
