Streamlit Cloud Entry Point - ESK Housing App
 Created root-level esk_housing_app.py for Streamlit Cloud
- Entry point imports from app/esk_housing_app.py
- Fixed 'file does not exist' error
- Ready for Streamlit Cloud deployment

 Deploy with: esk_housing_app.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,7 @@ statsmodels>=0.14.0
 # Basic utilities
 requests>=2.31.0
 python-dateutil>=2.8.2
+
+# ESK Housing App specific
+folium>=0.14.0
+streamlit-folium>=0.13.0
